fix dropdownmenu padding on mobile

--- a/app/components/search/Header/Header.module.scss
+++ b/app/components/search/Header/Header.module.scss
@@ -17,6 +17,10 @@
   justify-content: space-between;
   align-items: center;
   border-bottom: 1px solid $color-grey3;
+
+  @media screen and (max-width: $break-tablet-s) {
+    padding: $general-spacing-s $general-spacing-xxs;
+  }
 }
 
 .title {
